--- a/styles.css
+++ b/styles.css
@@ -706,13 +706,15 @@ article h2 {
 
 .cards {
     border: none;
+    border-style: none !important;
 }
 
 .flip-card {
     background-color: transparent;
     width: 300px;
     height: 200px;
-    border: 0px solid #f1f1f1;
+    border: 0px solid #f1f1f1; 
+    border-style: none !important;
     -webkit-perspective: 1000px;
             perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
@@ -749,8 +751,8 @@ article h2 {
   
   /* Style the front side (fallback if image is missing) */
   .flip-card-front {
-    background-color: #bbb;
-    color: black;
+/*     background-color: #bbb;
+ */    color: black;
   }
   
   /* Style the back side */
@@ -863,6 +865,7 @@ article h2 {
 
 
 .logos-title {
+    border-style: none !important;
     padding-top: 96px;
     padding-bottom: 60px;
     padding-right: 220px;
@@ -979,7 +982,7 @@ article h2 {
   }
   
   .left { grid-area: 1 / 1 / 3 / 3; 
-  background-image: url(./assets/covid.jpg);
+  background-image: url(./assets/oficina.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-origin: initial;
@@ -1012,7 +1015,7 @@ article h2 {
   }
   
   .right-image-two { grid-area: 2 / 3 / 3 / 4; 
-    background-image: url(./assets/oficina.jpg);
+    background-image: url(./assets/covid.jpg);
     background-size: cover;
   background-repeat: no-repeat;
   background-origin: initial;
