--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ header {
     padding-top: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     padding-bottom: 20px;
+    
   }
 
   header ul {
@@ -74,7 +75,7 @@ header {
 .banner .banner-title {
 font-family: 'Poppins';
 font-weight: bold;
-font-size: 3.5vw;
+font-size: 39pt;
 }
 
 .banner .banner-subtitle {
@@ -115,6 +116,67 @@ position: absolute;
     transform: translate(10%, -50%);
     text-align: right;
 }
+.banner-content-3{
+    display: flex; 
+    flex-direction: column; 
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-right: 5%;
+}
+
+
+
+@media only screen and (max-width: 900px){
+    
+    header{
+        position: absolute;
+        height: 5vw;
+        padding: 1vw;
+    }
+    header a{
+        display: none;
+    }
+    .banner {
+        margin-top: auto;
+        background-color: white;
+        color: #DE001A;
+        font-family: 'Poppins';
+        font-size: 11pt;
+        border-radius: 0;
+        width: 100%;
+        height: 25%;
+        border: none;
+    }
+
+    .banner .banner-content-2{
+        padding-left: 5vw;
+    }
+    .banner .banner-content-3{
+        padding-right: 10%;
+    }
+
+    .banner .banner-title{
+        font-size: 4vw;
+    }
+    .banner .banner-title{
+        font-size: 3.5vw;
+    }
+    .banner .banner-button {
+        margin-top: 2vw;
+        background-color: white;
+        color: #DE001A;
+        font-family: 'Poppins';
+        font-size: 7pt;
+        padding-bottom: 6vw;
+        max-width: 35vw;
+        max-height: 5vw;
+        border-radius: 20px;
+        border: none;
+        }
+    
+
+}
+
 
  .top-img {
     max-height: 1110px;
@@ -1047,12 +1109,12 @@ article h2 {
   
   @media screen and (max-width: 1400px) {
     .grid-container {
-      height: 600px;
+      height: fit-content;
     }
   }
   @media screen and (max-width: 1000px) {
     .grid-container {
-      height: 400px;
+        height: fit-content;
     }
   }
   
@@ -1062,7 +1124,7 @@ article h2 {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: 0px 0px;
-    height: 600px;
+    height: fit-content;
   }
   
   .left { grid-area: 1 / 1 / 3 / 3;
@@ -1085,17 +1147,21 @@ article h2 {
  }
 
 .modal-text  {
+    font-weight: 300;
+    width: fit-content;
     display: flex;
     flex-direction: column;
-    font-size: 1vw;
+    font-size: 1.047vw;
     padding-left: 2vw;
     color: gray;
     line-height: 20px;
+    padding-right: 4vw;
   }
   .modal-content {
     display: flex;
     flex-direction: column;
-    max-height: 55vw;
+    height: fit-content;
+    padding: 0px;
   }
 
   .modal p {
@@ -1112,16 +1178,12 @@ article h2 {
       justify-content: center;
     }
     .modal-content {
-      width: 70vw;
+      width: fit-content;
       max-height: 220vw;
     }
     .modal-text {
-      line-height: 10px;
+      line-height: 1.047vw;
       font-size: 10pt;
-    }
-    .modal-body {
-      display: flex;
-      flex-direction: column !important;
     }
   }
 
@@ -1136,6 +1198,10 @@ article h2 {
     }
   }
 
+  
+  .modal-content {
+    padding: 0vw;
+    }
   
 
 
@@ -1310,8 +1376,8 @@ margin-top: 25px;
 /* contact section */
 
 .contact {
-/*     padding: 50px 22vw;
- */    margin-top: 50vw;
+ padding: 50px 22vw;
+
     background-color: #BB0222;
     position: relative;
 }
@@ -1516,9 +1582,9 @@ display: flex; align-items: center;
 
 .page-footer {
     background-color: #BB0222;
-    padding-top: 4rem;
-    padding-bottom: 3rem;
-    font-size: 25px;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    font-size: 1.5vw;
     color: white;
 }
 
@@ -1564,7 +1630,7 @@ display: flex;
     color: white;
     text-decoration: none;
     background-color: transparent;
-    font-size: 24px;
+    font-size: 1.5vw;
 }
 
 .rights {
@@ -1581,11 +1647,26 @@ display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     text-align: center;
-    padding-top: 50px;
+    padding-top: 5vw;
 }
 
 .rights span {
     padding-right: 20px;
+}
+
+@media screen and (max-width: 768px) {
+    .page-footer {
+        padding-top: 2rem;
+        padding-bottom: 1rem;
+    }
+
+    .page-footer {
+        font-size: 3vw;
+    }
+
+    .links button {
+        font-size: 3vw;
+    }
 }
 
 
@@ -1903,4 +1984,33 @@ background-color: rgba(222, 222, 222);
 
 .img-rounded {
     border-radius: 1vw;
+}
+
+.side-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 3vw;
+    padding-bottom: 3vw;
+    line-height: 2.3vw;
+    font-size: 1.1vw;
+    padding-left: 2vw;
+    color: #4D4D4D;
+    padding-right: 2vw;
+  }
+  
+@media only screen and (max-width: 900px){
+    .contact-header h1 {
+        font-size: 5vw;
+        text-align: center;
+    }
+    .contact-header h2 {
+        font-size: 2vw;
+        text-align: center;
+    }
+    .services-title h1{
+        padding: 2vw;
+
+        font-size: 4vw;
+    }
 }
