--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ border: none;
 position: absolute;
     margin: 0;
     color: white;
-    left: 50%;
+    right: 10%;
     top: 45%;
     transform: translate(10%, -50%);
     text-align: right;
@@ -122,6 +122,11 @@ position: absolute;
     justify-content: flex-end;
     align-items: flex-end;
     padding-right: 5%;
+}
+
+.banner-button-1{
+    /* margin-top: 10px; width: 12rem; padding: 20px; height: 2em;
+                  display: flex; flex-direction: row; align-items: center; justify-content: center; font-size: 15px; border-radius: 8px; */
 }
 
 
