--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 
 
 /*header*/
-header {
+/* header {
     position: absolute;
     z-index: 20;
     width: 100%;
@@ -54,8 +54,46 @@ header {
   padding-left: 5vw;
   padding-right: 24vw;
   width: 10vw;
-}
+} */
 
+header {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-items: unset;
+    justify-content: space-around;
+    background: #232323;
+    color: #ccc;
+    }
+    .logo {
+    letter-spacing: 3px;
+    display: flex;
+    float: left;
+    max-height: 60%;
+    /* align-items: center;
+    justify-content: center; */
+    padding: 1em;
+
+    }
+    .nav {
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
+    transition: all 400ms;
+    }
+    .navlink {
+    list-style: none;
+    margin: 0;
+    }
+    .navlink a {
+    color: #ccc;
+    text-decoration: none;
+    font-size: 1.2em;
+    }
+    .burger {
+    font-size: 1.2em;
+    display: none;
+    }
 
 .banner .carousel-caption {
     display: flex;
@@ -133,14 +171,14 @@ position: absolute;
 
 @media only screen and (max-width: 900px){
     
-    header{
+    /* header{
         position: absolute;
         height: 5vw;
         padding: 1vw;
     }
     header a{
         display: none;
-    }
+    } */
     .banner {
         margin-top: auto;
         background-color: white;
@@ -199,13 +237,13 @@ position: absolute;
     width: 100%;
 }
 
-.logo {
+/* .logo {
     position: absolute;
     z-index: 1;
     margin-left: 4.325vw;
     margin-top: 4.323vw;
     width: 10.417vw;
-}
+} */
 
 
 .navbar {
@@ -1073,13 +1111,13 @@ article h2 {
   
   .right-one { grid-area: 1 / 3 / 2 / 5; 
   margin-bottom: 10px;
-  box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.5);
+  box-shadow: 1vw 1vw 1vw rgba(0, 0, 0, 0.5);
   }
   
   .right-two {
     margin-top: 10px;
     grid-area: 2 / 3 / 3 / 5;
-    box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 1vw 1vw 1vw rgba(0, 0, 0, 0.5);
   
   }
   
@@ -2060,6 +2098,9 @@ background-color: rgba(222, 222, 222);
 #company-grid-mobile{
     display: none;
 }
+#novedades-mobile{
+    display: none;
+}
 
 @media only screen and (max-width: 996px){
     #services-grid-mobile{
@@ -2074,12 +2115,123 @@ background-color: rgba(222, 222, 222);
     #company-grid-desktop{
         display: none;
     }
+    #novedades-mobile{
+        display: flex;
+        flex-direction: column;
+    }
+    #novedades-desktop{
+        display: none;
+    }
 }
 #text-la-empresa{
     text-align: justify;
 }
 
+
+@media screen and (max-width: 678px) {
+    .burger{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .nav {
+        margin: 0;
+        background: #343434;
+        position: fixed;
+        right: 0;
+        top: 70px;
+        width: 50%;
+        height: calc(100% - 70px);
+        flex-direction: column;
+        justify-content: space-around;
+        padding: 0;
+        }
+        .navlink {
+        text-align: center;
+        }
+
+}
 @media only screen and (max-width: 996px){
+    .normas-iso{
+        flex-direction: column;
+    }
+
+    .iso-text {
+        padding-right: 5vw;
+        padding-left: 5vw;
+        text-align: center;
+    }
+    .iso-text h4{
+        font-size: 15pt;
+    }
+    .iso-text h5{
+        font-size: 10pt;
+        /* text-align: justify; */
+        padding: 3vw;
+    }
+    .image-around{
+        float: left;
+        flex-direction: row;
+        border-radius: 10px;
+    }
+    .images-certificados{
+        margin-top: 5vh;
+        margin-bottom: 5vh;
+    }
+
+    .left{
+        grid-area: unset;
+        background-image: none;
+        background-size: 75% 50%;
+        background-position: top;
+        height: inherit;
+        width: inherit;
+    }
+
+    .modal-preview-tittle{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+    }
+
+    .modal-preview-subtittle{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-bottom: 5%;
+    }
+    .modal-mobile{
+        display: flex; 
+        flex-direction: column; 
+        justify-content: flex-end;
+        text-align: center; 
+        align-items: center;
+        padding-bottom: 1vw;
+        margin-bottom: 5vw;
+        height: 50vh;
+        width: 100%;
+    }
+    .modal-mobile img{
+        height: 50%;
+        /* max-width: 5%; */
+        width:100%;
+        margin-bottom: 5%;
+        margin-top: 0;
+    }
+    .logos-title{
+        display: flex; 
+        flex-direction: column; 
+        justify-content: flex-end;
+        text-align: center; 
+        align-items: center;
+    }
 
 
+}
+
+.nav-active {
+    right: 0;
 }
