--- a/public/css/form2.css
+++ b/public/css/form2.css
@@ -23,10 +23,13 @@
     padding-top: 4rem;
     padding-bottom: 3rem;
     float:bottom;
-    font-size: 25px;
+    /* font-size: 25px; */
     color: white;
     width: 100%;
     position: absolute;
+    padding-right: 5vw;
+        padding-left: 5vw;
+        font-size: 1rem;
 }
 
 .rights {
@@ -58,8 +61,7 @@
     }
     
     .links a {
-        padding-right: 30px;
-        padding-left: 30px;
+        
         color: white;
         text-decoration: none;
     }
@@ -80,7 +82,7 @@
         color: white;
         text-decoration: none;
         background-color: transparent;
-        font-size: 24px;
+        /* font-size: 24px; */
     }
     @media screen and (max-width: 605px){
         .navbar-logo{
