--- a/bootstrap.css
+++ b/bootstrap.css
@@ -7,7 +7,7 @@ img {
 .carousel-inner > .item > a > img {
   display: block;
   max-width: 100%;
-  height: auto;
+  height: 58vw;
 }
 .img-rounded {
   border-radius: 6px;
