--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,23 @@
     border: 0px;
     padding: 0px;
     margin: 0px;
-    
-
 }
+
+header a {
+    color: white;
+    text-decoration: none;
+  }
+
+  header a:hover {
+    color: #BB0222;
+  }
+
+  .banner-button:hover {
+    background-color: red;
+    color: white;
+  }
+
+
 header{
     background-color: #333333;
 }
@@ -25,38 +39,12 @@ body {
     padding-left: 0px;
     padding-right: 0px;
     border: none;
+    max-width: 100vw;
 }
 .btn{
     background-color: inherit;
 }
 
-
-/*header*/
-/* header {
-    position: absolute;
-    z-index: 20;
-    width: 100%;
-    padding-top: 20px;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding-bottom: 20px;
-    
-  } */
-
-  /* header ul {
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    align-items: center;
-    justify-content: space-between;
-    color: white;
-    margin-left: 5vw;
-    margin-right: 5vw;
-    font-size: 1.2vw;
-  }
-
-  header ul li:hover {
-    color: #BB0222;
-  } */
 
 #logo {
   padding-left: 5vw;
@@ -124,7 +112,7 @@ position: absolute;
     transform: translate(10%, -50%);
     text-align: right;
 }
-.banner-content-3{
+.banner-content-3 {
     display: flex; 
     flex-direction: column; 
     justify-content: flex-end;
@@ -132,29 +120,9 @@ position: absolute;
     padding-right: 5%;
 }
 
-.banner-button-1{
-    /* margin-top: 10px; width: 12rem; padding: 20px; height: 2em;
-                  display: flex; flex-direction: row; align-items: center; justify-content: center; font-size: 15px; border-radius: 8px; */
-}
-
-
 
 @media only screen and (max-width: 900px){
-/*     
-    header{
-        position: absolute;
-        display: block;
-        height: 5vw;
-        padding: 1vw;
-        z-index: 50;
-    } */
-    /* header a{
-        display: none;
-    } */
-    /* header nav{
-        display: block;
-        margin-bottom: 100px;
-    } */
+
     .banner {
         margin-top: auto;
         background-color: white;
@@ -181,7 +149,7 @@ position: absolute;
         font-size: 3.5vw;
     }
     .banner .banner-button {
-        /* margin-top: 2vw; */
+
         background-color: white;
         color: #DE001A;
         font-family: 'Poppins';
@@ -193,12 +161,6 @@ position: absolute;
         border-radius: 20px;
         border: none;
         }
-    /* .center-text{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    } */
-    
 
 }
 
@@ -223,6 +185,10 @@ position: absolute;
     position: absolute;
     z-index: 1;
     width: 100%;
+}
+
+.navbar-fixed nav {
+max-width: 100vw;
 }
 
 .menu-buttons {
@@ -470,7 +436,7 @@ padding: 5px 10px 5px 10px;
 }
 
 
-/*comunnicate section*/
+/*communicate section*/
 
 
 .contact h3 {
@@ -538,6 +504,49 @@ padding: 5px 10px 5px 10px;
     padding-top: 8.156vw;
     padding-bottom: 4vw;
     font-size: 1vw;
+}
+
+
+@media screen and (min-width: 768px) {
+.contact-row button {
+    margin-bottom: 35px;
+    display: none;
+}
+
+.small-img {
+    display: block;
+}
+
+#contact-1:hover button {
+    display: block;
+}
+
+#contact-2:hover button {
+    display: block;
+}
+
+#contact-3:hover button {
+    display: block;
+}
+
+#contact-4:hover button {
+    display: block;
+}
+
+
+#contact-2:hover .small-img {
+    display: none;
+}
+
+#contact-3:hover .small-img {
+    display: none;
+}
+
+.images-certificados {
+    display: flex;
+}
+
+
 }
 
 .contact-title {
@@ -896,6 +905,26 @@ article h2 {
     padding-bottom: 130px;
 }
 
+@media screen and (max-width: 768px) {
+    .logos {
+        padding-bottom: 50px;
+    }
+    .customer-logos {
+        padding-bottom: 50px !important;
+    }
+    .logos-title {
+        padding-bottom: 10vw !important;
+    }
+    .iso-text h4 {
+        text-align: center;
+    }
+    .images-certificados {
+        display: flex;
+flex-direction: row;
+align-items: center;
+    }
+}
+
 .customer-logos {
     padding-bottom: 100px;
 }
@@ -1046,6 +1075,78 @@ article h2 {
   }
 
 /*novedades*/
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+  }
+
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+    /* Could be more or less, depending on screen size */
+    display: flex;
+    padding: 4vw;
+  }
+
+  /* The Close Button */
+  .close {
+    color: darkgray;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .modal-menu-and-text {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .modal-menu {
+    padding-top: 3vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .modal-menu button {
+    margin-bottom: 5px;
+    background-color: transparent;
+    color: red;
+    font-weight: 700;
+  }
+
+  .modal-text {
+    font-weight: 300;
+  }
 
 .novedades {
     display: flex;
@@ -1375,11 +1476,10 @@ margin-top: 25px;
   }
   
   .slide {
-      
-
+    
           display: block;
           width: 100%;
-          height: auto;
+          height: 55vw;
       
   }
   
@@ -1548,6 +1648,16 @@ display: flex; align-items: center;
     color: #4D4D4D;
   }
 
+  .map-button:focus {
+      border: none;
+      outline: none;
+      background-color: rgba(0, 0, 0, 0.05);
+  }
+
+  .map-button:active {
+    border: none;
+    outline: none;
+}
 
   #map-content {
     width: 582px;
