--- a/styles.css
+++ b/styles.css
@@ -12,23 +12,9 @@
     border: 0px;
     padding: 0px;
     margin: 0px;
+    
+
 }
-
-header a {
-    color: white;
-    text-decoration: none;
-  }
-
-  header a:hover {
-    color: #BB0222;
-  }
-
-  .banner-button:hover {
-    background-color: red;
-    color: white;
-  }
-
-
 header{
     background-color: #333333;
 }
@@ -39,12 +25,13 @@ body {
     padding-left: 0px;
     padding-right: 0px;
     border: none;
-    max-width: 100vw;
 }
 .btn{
     background-color: inherit;
 }
-
+.slide {
+    height: 60vw !important;
+}
 
 #logo {
   padding-left: 5vw;
@@ -112,7 +99,7 @@ position: absolute;
     transform: translate(10%, -50%);
     text-align: right;
 }
-.banner-content-3 {
+.banner-content-3{
     display: flex; 
     flex-direction: column; 
     justify-content: flex-end;
@@ -121,8 +108,163 @@ position: absolute;
 }
 
 
-@media only screen and (max-width: 900px){
+.modal-body img {
+    order: 1;
+}
+.modal-text {
+    order: 2;
+}
 
+.customer-logos {
+    height: 200px;
+}
+
+.images-certificados {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.navbar-fixed nav {
+    max-width: 100vw;
+}
+
+@media screen and (min-width: 768px) {
+    #contact-1 button,
+    #contact-2 button,
+    #contact-3 button,
+    #contact-4 button {
+        display: none;
+    }
+
+    #contact-1:hover button,
+    #contact-2:hover button,
+    #contact-3:hover button,
+    #contact-4:hover button {
+        display: block;
+    }
+
+    #contact-2:hover .small-img,
+    #contact-3:hover .small-img {
+        display: none;
+    }
+    .modal-dialog {
+        margin: 70px;
+    }
+    #sosRosa {
+        max-height: 40vw;
+    }
+    .modal-dialog-centered {
+        display: flex;
+    justify-content: center;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .customer-logos {
+        padding-bottom: 50px !important;
+    }
+
+    .slick-dots {
+        top: 125px !important;
+    }
+    .logos {
+        padding-bottom: 25px !important;
+    }
+    .logos-title {
+        padding-bottom: 10vw !important;
+    }
+    .iso-text h4 {
+        text-align: center;
+    }
+    .modal-dialog-centered {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 8px;
+    }
+    .modal-content {
+        width: 90vw !important;
+        background-color: #dedede;
+    }
+    .modal-body {
+        flex-direction: column !important;
+        margin-right: 20px !important;
+    }
+    .modal-text {
+        line-height: 5vw !important;
+        padding-top: 15px !important;
+    }
+    #novedades-mobile {
+        margin-left: 15px;
+    }
+    .modal-body img {
+        order: 2;
+    }
+    .modal-text {
+
+        order: 1;
+        color: black !important;
+        padding-right: 2vw !important;
+    }
+    .modal-text h4 {
+        color: #BB0222 !important;
+    }
+    .modal-text p {
+        line-height: 15px;
+    }
+    .subtitle-modal {
+        color: rgba(0, 0, 0, 0.6);
+        font-weight: bold;
+    }
+    .modal-text ul {
+        text-align: justify;
+        margin-bottom: 10px;
+        line-height: 19px !important;
+        font-size: 9px;
+    }
+    .under-subtitle {
+        text-align: justify;
+        line-height: 19px !important;
+        font-size: 9px;
+    }
+    .under-subtitle a {
+        text-decoration: none;
+        color: black;
+    }
+    .modal-header .close {
+        top: 0px;
+        margin-top: 0px;
+    }
+    .close {
+        opacity: 0.9;
+    }
+    .close span {
+        font-family: times;
+    font-size: 35px;
+    padding: 10px;
+    top: 5px;
+    position: relative;
+    color: black !important;
+    }
+}
+
+@media only screen and (max-width: 900px){
+/*     
+    header{
+        position: absolute;
+        display: block;
+        height: 5vw;
+        padding: 1vw;
+        z-index: 50;
+    } */
+    /* header a{
+        display: none;
+    } */
+    /* header nav{
+        display: block;
+        margin-bottom: 100px;
+    } */
     .banner {
         margin-top: auto;
         background-color: white;
@@ -149,7 +291,7 @@ position: absolute;
         font-size: 3.5vw;
     }
     .banner .banner-button {
-
+        /* margin-top: 2vw; */
         background-color: white;
         color: #DE001A;
         font-family: 'Poppins';
@@ -161,6 +303,12 @@ position: absolute;
         border-radius: 20px;
         border: none;
         }
+    /* .center-text{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    } */
+    
 
 }
 
@@ -185,11 +333,7 @@ position: absolute;
     position: absolute;
     z-index: 1;
     width: 100%;
-}
-
-.navbar-fixed nav {
-max-width: 100vw;
-}
+}Z
 
 .menu-buttons {
     display: -webkit-box;
@@ -436,7 +580,7 @@ padding: 5px 10px 5px 10px;
 }
 
 
-/*communicate section*/
+/*comunnicate section*/
 
 
 .contact h3 {
@@ -504,49 +648,6 @@ padding: 5px 10px 5px 10px;
     padding-top: 8.156vw;
     padding-bottom: 4vw;
     font-size: 1vw;
-}
-
-
-@media screen and (min-width: 768px) {
-.contact-row button {
-    margin-bottom: 35px;
-    display: none;
-}
-
-.small-img {
-    display: block;
-}
-
-#contact-1:hover button {
-    display: block;
-}
-
-#contact-2:hover button {
-    display: block;
-}
-
-#contact-3:hover button {
-    display: block;
-}
-
-#contact-4:hover button {
-    display: block;
-}
-
-
-#contact-2:hover .small-img {
-    display: none;
-}
-
-#contact-3:hover .small-img {
-    display: none;
-}
-
-.images-certificados {
-    display: flex;
-}
-
-
 }
 
 .contact-title {
@@ -905,26 +1006,6 @@ article h2 {
     padding-bottom: 130px;
 }
 
-@media screen and (max-width: 768px) {
-    .logos {
-        padding-bottom: 50px;
-    }
-    .customer-logos {
-        padding-bottom: 50px !important;
-    }
-    .logos-title {
-        padding-bottom: 10vw !important;
-    }
-    .iso-text h4 {
-        text-align: center;
-    }
-    .images-certificados {
-        display: flex;
-flex-direction: row;
-align-items: center;
-    }
-}
-
 .customer-logos {
     padding-bottom: 100px;
 }
@@ -1076,78 +1157,6 @@ align-items: center;
 
 /*novedades*/
 
-.modal {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
-  }
-
-  /* Modal Content/Box */
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 60%;
-    /* Could be more or less, depending on screen size */
-    display: flex;
-    padding: 4vw;
-  }
-
-  /* The Close Button */
-  .close {
-    color: darkgray;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-
-  .modal-menu-and-text {
-    display: flex;
-    flex-direction: row;
-  }
-
-  .modal-menu {
-    padding-top: 3vw;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .modal-menu button {
-    margin-bottom: 5px;
-    background-color: transparent;
-    color: red;
-    font-weight: 700;
-  }
-
-  .modal-text {
-    font-weight: 300;
-  }
-
 .novedades {
     display: flex;
     flex-direction: column;
@@ -1297,7 +1306,7 @@ align-items: center;
   }
 
   .modal-body img {
-    max-height: 42.5vw;
+    max-height: 59vw;
   }
   
   @media screen and (max-width: 768px) {
@@ -1307,7 +1316,6 @@ align-items: center;
     }
     .modal-content {
       width: fit-content;
-      max-height: 220vw;
     }
     .modal-text {
       line-height: 1.047vw;
@@ -1476,10 +1484,11 @@ margin-top: 25px;
   }
   
   .slide {
-    
+      
+
           display: block;
           width: 100%;
-          height: 55vw;
+          height: auto;
       
   }
   
@@ -1648,16 +1657,6 @@ display: flex; align-items: center;
     color: #4D4D4D;
   }
 
-  .map-button:focus {
-      border: none;
-      outline: none;
-      background-color: rgba(0, 0, 0, 0.05);
-  }
-
-  .map-button:active {
-    border: none;
-    outline: none;
-}
 
   #map-content {
     width: 582px;
@@ -2105,7 +2104,8 @@ box-shadow: 0.8vw 0.8vw 0.8vw 0px rgba(0,0,0,0.3);
     font-weight: 600; 
     font-size: 13pt; 
     color: #4D4D4D;
-    line-height: 30pt;
+    margin-top: 5px;
+    margin-bottom: 15px;
 }
 
 .modal-preview-text{
@@ -2123,7 +2123,7 @@ background-color: rgba(222, 222, 222);
 .modal-datos-utiles-tittle{
     font-size: 1.6vw; 
     font-weight: 600; 
-    color: red;
+    color: #DE001A;
 }
 
 .modal-datos-utiles ul>li {
@@ -2215,6 +2215,8 @@ background-color: rgba(222, 222, 222);
     #novedades-mobile{
         display: flex;
         flex-direction: column;
+        margin-left: 0px;
+        margin-right: 18px;
     }
     #novedades-desktop{
         display: none;
@@ -2267,6 +2269,7 @@ background-color: rgba(222, 222, 222);
         width: inherit;
         box-shadow: none;
         background-color: #dedede;
+        padding-bottom: 30px;
     }
 
     .modal-preview-tittle{
@@ -2303,7 +2306,6 @@ background-color: rgba(222, 222, 222);
         align-items: center;
         padding-bottom: 1vw;
         margin-bottom: 5vw;
-        height: 70vh;
         width: 100%;
     }
     .modal-mobile img{
@@ -2327,7 +2329,7 @@ background-color: rgba(222, 222, 222);
         font-size: 10pt;
         padding-left: 5%;
         padding-right: 5%;
-        color: red;
+        color: #DE001A;
 
     }
 
