Changes to form links
Redirects to current forms

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,11 @@ height: 45px;
 border: none;
 }
 
+.banner .banner-button a {
+    color: #DE001A;
+    text-decoration: none;
+}
+
 .banner .text-in-carousel-2 {
     position: absolute;
     margin: 0;
