--- a/styles.css
+++ b/styles.css
@@ -790,7 +790,7 @@ h1 {
 }
 
 .hamburger {
-    background-image: url("./content/menu-icon.png");
+    background-image: url("src/content/menu-icon.png");
     background-size: 2vw;
     background-repeat: no-repeat;
     margin-top: 4.878vw;
@@ -1611,7 +1611,7 @@ article h2 {
   }
   
   .left { -ms-grid-row: 1; -ms-grid-row-span: 2; -ms-grid-column: 1; -ms-grid-column-span: 2; grid-area: 1 / 1 / 3 / 3; 
-  background-image: url(./assets/oficina.jpg);
+  background-image: url('src/assets/oficina.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-origin: initial;
@@ -1643,7 +1643,7 @@ article h2 {
   .right-image-one { -ms-grid-row: 1; -ms-grid-row-span: 1; -ms-grid-column: 3; -ms-grid-column-span: 1; grid-area: 1 / 3 / 2 / 4; 
     margin-bottom: 10px;
   background-color: royalblue;
-  background-image: url(./assets/sosrosa.png);
+  background-image: url('src/assets/sosrosa.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-origin: initial;
@@ -1651,7 +1651,7 @@ article h2 {
   }
   
   .right-image-two { -ms-grid-row: 2; -ms-grid-row-span: 1; -ms-grid-column: 3; -ms-grid-column-span: 1; grid-area: 2 / 3 / 3 / 4; 
-    background-image: url(./assets/covid.jpg);
+    background-image: url('src/assets/covid.jpg');
     background-size: cover;
   background-repeat: no-repeat;
   background-origin: initial;
