--- a/styles.css
+++ b/styles.css
@@ -888,8 +888,8 @@ padding: 5px 10px 5px 10px;
 
 
 .small-img {
-    height: 2vw;
-    width: 2vw;
+    height: 3vw;
+    width: 3vw;
 }
 
 
@@ -1961,7 +1961,8 @@ display: flex; align-items: center;
 
     }
     .contact-column-text{
-        padding: 5vw;
+        padding-left: 5vw;
+        display: inline-block;
     }
   }
 
@@ -2602,4 +2603,8 @@ header nav {
 
 header li{
     list-style-type: none;
+}
+
+html,body{
+    overflow-x: hidden;
 }
