--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,9 @@ position: absolute;
         width: 20vw;
         padding-bottom: 80px;
     }
+    .map-button {
+        padding-bottom: 25px;
+    }
 }
 
 .splide__arrow {
@@ -1204,7 +1207,7 @@ height: 50vw;
       width: 100%;
     height: 1080px;
     background-image: url("src/assets/quienessomos.jpg");
-    background-repeat:no-repeat; /* Indicamos que no se repetira */
+    background-repeat: no-repeat; /* Indicamos que no se repetira */
 background-size: cover; /* Encajamos la imagen al 100% del ancho */
 background-attachment: fixed; /* Establecemos una posicion fija para la imagen */
 background-position: center;
@@ -1212,7 +1215,9 @@ background-position: center;
 
 @media screen and (max-width: 768px) {
     .parallax {
-    height: 900px;
+        background-image: url("parallax-mobile.jpg");
+         height: 900px;
+         background-attachment: fixed !important;
 }
 }
 
@@ -2312,7 +2317,7 @@ display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: c
     .map-button {
       text-align: center;
       font-size: 2.4vw;
-      height: 14vw;
+      height: 70px;
     }
     #map-content {
       width: 50vw;
